# Kaspa-Script

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
compiler/codegen/: Cargo.toml
compiler/codegen/benches/: escrow.rs
compiler/codegen/src/: grounding.rs  lib.rs
compiler/codegen/src/backends/: mod.rs  toccata.rs
compiler/codegen/tests/: integration_test.rs
compiler/ir/: Cargo.toml
compiler/ir/src/: application.rs  gen.rs  instructions.rs  lib.rs  types.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lexer.rs  lib.rs  token.rs
compiler/model/: Cargo.toml
compiler/model/src/: lib.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: ast.rs  lib.rs  parser.rs
compiler/parser/tests/: fuzz_smoke.rs
compiler/protocol/: Cargo.toml
compiler/protocol/src/: lib.rs
compiler/semantic/: Cargo.toml
compiler/semantic/src/: checker.rs  lib.rs  scope.rs
contracts/production/: DAGSafeVault.ks  README.md
docs/: CLI_REPORT_SCHEMAS.md  KASPASCRIPT_PROGRAM_MODEL.md  KASPA_PROGRAMMABILITY_KERNEL.md  KASPA_UPGRADE_PREP.md  KERNEL_PACKAGE_SCHEMA.md  PROJECT_STATUS.md  RUSTY_KASPA_UPSTREAM_WATCH.md  TESTNET.md  TESTNET_PROOFS.md  TOCCATA_CRATE_COMPATIBILITY.md  TOCCATA_UPGRADE_CHECKLIST.md  TOCCATA_V2_INTEGRATION.md  TRANSACTION_BUILDER.md  index.html  kaspa-source-audit.md  pages.css  source-grounding.md
docs/architecture/: ADR-001-canonical-application-model.md
docs/schemas/: kaspascript.application.v0.schema.json  kaspascript.cli.kernel.check.v0.schema.json  kaspascript.cli.kernel.preview.v0.schema.json  kaspascript.cli.toccata.fee.v0.schema.json  kaspascript.cli.toccata.status.v0.schema.json  kaspascript.cli.toccata.targets.v0.schema.json  kaspascript.kernel.package.v0.schema.json  kaspascript.sdk.toccata.compatibility-fixtures.v0.schema.json
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/tests/: dagsafe_vault.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  testnet.rs  tn12.rs  toccata.rs
sdk/tests/: tn12_integration.rs
tests/contracts/: atomic_swap.ks  dagsafe_channel.ks  escrow.ks  multisig.ks  state_channel.ks  timelock.ks  vault.ks
tests/fixtures/toccata/: v2_0_1_compatibility.json
tests/golden/: atomic_swap.artifact.json  atomic_swap.expected.asm  atomic_swap.expected.hex  escrow.artifact.json  escrow.expected.asm  escrow.expected.hex  escrow.kernel.json  escrow.tn10.kernel.json  multisig.artifact.json  multisig.expected.asm  multisig.expected.hex  state_channel.artifact.json  state_channel.expected.asm  state_channel.expected.hex  timelock.artifact.json  timelock.expected.asm  timelock.expected.hex  vault.artifact.json  vault.expected.asm  vault.expected.hex  vault.kernel.json  vault.tn10.kernel.json
tests/golden/cli/: kernel.check.escrow.verified-tn12.json  kernel.preview.escrow.release.verified-tn12.json  toccata.fee.json  toccata.status.json  toccata.targets.json
