[package]
name = "kaspascript-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
kaspascript-codegen = { path = "../compiler/codegen" }
kaspascript-ir = { path = "../compiler/ir" }
kaspascript-kernel = { path = "../kernel" }
kaspascript-lexer = { path = "../compiler/lexer" }
kaspascript-sdk = { path = "../sdk" }
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["rt-multi-thread"], optional = true }

[features]
default = []
testnet-integration = ["kaspascript-sdk/testnet-integration", "dep:tokio"]
tn12-integration = ["testnet-integration"]

[[bin]]
name = "kaspascript"
path = "src/main.rs"
