[package]
name = "kaspascript-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kaspa-addresses = { version = "0.15.0", optional = true }
kaspa-consensus-client = { version = "0.15.0", optional = true }
kaspa-consensus-core = { version = "0.15.0", optional = true }
kaspa-rpc-core = { version = "0.15.0", optional = true }
kaspa-txscript = { version = "0.15.0", optional = true }
kaspa-wallet-core = { version = "0.15.0", optional = true }
kaspa-wrpc-client = { version = "0.15.0", optional = true }
kaspascript-codegen = { path = "../compiler/codegen" }
kaspascript-ir = { path = "../compiler/ir", optional = true }
kaspascript-kernel = { path = "../kernel" }
kaspascript-lexer = { path = "../compiler/lexer" }
kaspascript-model = { path = "../compiler/model" }
js-sys = { version = "=0.3.70", optional = true }
secp256k1 = { version = "0.29.1", features = ["rand-std"], optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"], optional = true }
wasm-bindgen = { version = "=0.2.93", optional = true }
wasm-bindgen-futures = { version = "=0.4.43", optional = true }
web-sys = { version = "=0.3.70", optional = true }

[features]
default = []
testnet-integration = [
    "dep:kaspa-addresses",
    "dep:kaspa-consensus-client",
    "dep:kaspa-consensus-core",
    "dep:kaspa-rpc-core",
    "dep:kaspa-txscript",
    "dep:kaspa-wallet-core",
    "dep:kaspa-wrpc-client",
    "dep:kaspascript-ir",
    "dep:js-sys",
    "dep:secp256k1",
    "dep:tokio",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
tn12-integration = [
    "testnet-integration",
]

[lib]
path = "src/lib.rs"
