[package]
name = "kaspascript-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kaspascript-ir = { path = "../ir" }
kaspascript-lexer = { path = "../lexer" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "escrow"
harness = false
