[package]
name = "kaspascript-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kaspascript-ir = { path = "../ir" }
kaspascript-lexer = { path = "../lexer" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[features]
default = []
testnet-integration = []
tn12-integration = ["testnet-integration"]

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "escrow"
harness = false
