[package]
name = "kaspascript-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kaspascript-lexer = { path = "../lexer" }
kaspascript-parser = { path = "../parser" }
kaspascript-semantic = { path = "../semantic" }
serde.workspace = true
thiserror.workspace = true

[features]
default = []
tn12-integration = []

[lib]
path = "src/lib.rs"
