[package]
name = "kaspascript-lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
logos.workspace = true
serde.workspace = true
thiserror.workspace = true

[features]
default = []
testnet-integration = []
tn12-integration = ["testnet-integration"]

[lib]
path = "src/lib.rs"
