[package]
name = "kaspascript-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kaspascript-lexer = { path = "../lexer" }
serde.workspace = true
thiserror.workspace = true

[features]
default = []
testnet-integration = []
tn12-integration = ["testnet-integration"]

[lib]
path = "src/lib.rs"
